[package]
name = "tauri-plugin-stronghold"
version = "2.0.0-beta.3"
description = "Store secrets and keys using the IOTA Stronghold encrypted database."
authors =["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.75"
links = "tauri-plugin-stronghold"

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]

[build-dependencies]
tauri-plugin = {version="2.0.0-beta.10", features = [ "build" ] }

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tauri = "2.0.0-beta.12"
log = "0.4"
thiserror = "1"
iota_stronghold = "1"
iota-crypto = "0.23"
hex = "0.4"
zeroize = { version = "1", features = [ "zeroize_derive" ] }
rust-argon2 = { version = "1", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
rand_core = { version = "0.6.4", features = [ "getrandom" ], optional = true }

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"

[features]
default = [ "kdf" ]
kdf = [ "dep:rust-argon2", "dep:rand_chacha", "dep:rand_core" ]
